# po-235

./: .gitignore  Makefile  Projeto_Ciência_de_Dados.ipynb  README.md  RandomForest_v2.py  gradient_boosting_agrupado.py  pyproject.toml  random_forest.py  requirements.txt  resultados
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: cd.yaml  ci.yaml
.streamlit/: config.toml
docs/: 1_como_configurar_ambiente.md  1_environment_setup.md  2_como_contribuir_com_o_projeto.md  2_contribution_guide.md  3_arquitetura_do_projeto.md  3_project_architecture.md  4_model_deployment.md
entrypoints/: XGboosting-test.py  random_forest_training.py  st_app.py  train.py  xgboost_vinho_2.py
model/: XGboosting-test.py
models/: inferences.py  model.py  preprocessing.py  random_forest.py
streamlit_app/: model_loader.py  models.py  sidebar.py
streamlit_app/.streamlit/: config.toml
tests/: conftest.py  test_inferences.py  test_model.py  test_preprocessing.py  test_st_app.py  test_train.py
