[project]
name = "po-235"
version = "0.1.0"
description = "Projeto final para a matéria PO-235"
authors = [
    { name = "Bárbara", email = "?" },
    { name = "Catarina", email = "?" },
    { name = "Lucas", email = "?" },
    { name = "João Campos", email = "jpl.campos@hotmail.com" }
]
readme = "README.md"
requires-python = "==3.13.7"

# ⚠️ IMPORTANTE: Só adicione/modifique dependências se necessário e com aprovação do time
# Use: uv add <pacote> para adicionar novas dependências
dependencies = [
    "pandas == 2.3.3",
    "pytest == 8.4.2",
    "streamlit == 1.50.0",
    "ruff >= 0.14.1",
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "D100",
    "D102",
    "UP",
    "YTT",
    "ANN",
    "S110",
    "S112",
    "B",
    "A",
    "COM",
    "T10",
    "G",
    "PT",
    "Q",
    "SIM",
    "ARG",
    "PTH",
    "ERA",
    "NPY",
]

ignore = ["COM812", "D100", "ANN101", "ANN102", "PD901"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]